// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/StepInput Compact 1`] = `
<section>
  <label
    class="fd-form-label"
    for="step-1"
  >
    Compact Step Input
  </label>
  <br />
  

  <div
    class="fd-form-item fd-form-item--horizontal"
  >
    
    
    <div
      class="fd-step-input fd-step-input--compact"
    >
      
            
      <button
        aria-label="Step down"
        class="
                fd-button
                fd-button--compact
                fd-button--transparent
                fd-step-input__button"
        onclick="stepInputValue('step-1', 'down');"
        tabindex="-1"
        type="button"
      >
        
                    
        <i
          class="sap-icon--less"
        />
        
            
      </button>
      
        
      <input
        class="
                fd-input 
                fd-input--compact 
                fd-input--no-number-spinner 
                fd-step-input__input
        "
        id="step-1"
        type="number"
        value="0"
      />
      
            
      <button
        aria-label="Step up"
        class="
                fd-button 
                fd-button--compact
                fd-button--transparent
                fd-step-input__button"
        onclick="stepInputValue('step-1', 'up');"
        tabindex="-1"
        type="button"
      >
        
                    
        <i
          class="sap-icon--add"
        />
        
            
      </button>
      
    
    </div>
    
    
    <span
      class="fd-form-label fd-form-label--unit-description"
    >
      PC
    </span>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/StepInput Default 1`] = `
<section>
  <label
    class="fd-form-label"
    for="step-3"
  >
    Default Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input"
  >
    
  
    <button
      aria-label="Step down"
      class="
            fd-button
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-3', 'down');"
      tabindex="-1"
      type="button"
    >
      
    
      <i
        class="sap-icon--less"
      />
      
  
    </button>
    
  
    <input
      class="fd-input fd-input--no-number-spinner fd-step-input__input"
      id="step-3"
      type="number"
      value="0"
    />
    
  
    <button
      aria-label="Step up"
      class="
            fd-button 
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-3', 'up');"
      tabindex="-1"
      type="button"
    >
      
    
      <i
        class="sap-icon--add"
      />
      
  
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/StepInput Disabled 1`] = `
<section>
  <label
    class="fd-form-label"
    for="step-13"
  >
    Disabled Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input is-disabled"
  >
    
        
    <button
      aria-label="Step down"
      class="
            fd-button
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-13', 'down');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--less"
      />
      
        
    </button>
    
    
    <input
      class="
            fd-input 
            fd-input--no-number-spinner 
            fd-step-input__input
    "
      disabled=""
      id="step-13"
      type="number"
      value="0"
    />
    
        
    <button
      aria-label="Step up"
      class="
            fd-button 
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-13', 'up');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--add"
      />
      
        
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/StepInput Focused 1`] = `
<section>
  <label
    class="fd-form-label"
    for="step-20"
  >
    Focused Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input is-focus"
  >
    
        
    <button
      aria-label="Step down"
      class="
            fd-button
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-20', 'down');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--less"
      />
      
        
    </button>
    
    
    <input
      class="
            fd-input 
            fd-input--no-number-spinner 
            fd-step-input__input
    "
      id="step-20"
      type="number"
      value="0"
    />
    
        
    <button
      aria-label="Step up"
      class="
            fd-button 
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-20', 'up');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--add"
      />
      
        
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/StepInput Read-only 1`] = `
<section>
  <label
    class="fd-form-label"
    for="step-14"
  >
    Temperature set to
  </label>
  <br />
  

  <div
    class="fd-form-item fd-form-item--horizontal"
  >
    
    
    <div
      class="fd-step-input is-readonly"
    >
      
            
      <button
        aria-label="Step down"
        class="
                fd-button
                fd-button--transparent
                fd-step-input__button"
        onclick="stepInputValue('step-14', 'down');"
        tabindex="-1"
        type="button"
      >
        
                    
        <i
          class="sap-icon--less"
        />
        
            
      </button>
      
        
      <input
        class="
                fd-input 
                fd-input--no-number-spinner 
                fd-step-input__input
        "
        id="step-14"
        readonly=""
        type="number"
        value="23"
      />
      
            
      <button
        aria-label="Step up"
        class="
                fd-button 
                fd-button--transparent
                fd-step-input__button"
        onclick="stepInputValue('step-14', 'up');"
        tabindex="-1"
        type="button"
      >
        
                    
        <i
          class="sap-icon--add"
        />
        
            
      </button>
      
            
    </div>
    
        
    <span
      class="fd-form-label fd-form-label--unit-description"
    >
      Degree Celsius
    </span>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/StepInput States 1`] = `
<section>
  <label
    class="fd-form-label"
    for="step-5"
  >
    Success Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input is-success"
  >
    
        
    <button
      aria-label="Step down"
      class="
            fd-button
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-5', 'down');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--less"
      />
      
        
    </button>
    
    
    <input
      class="
            fd-input 
            fd-input--no-number-spinner 
            fd-step-input__input
    "
      id="step-5"
      type="number"
      value="0"
    />
    
        
    <button
      aria-label="Step up"
      class="
            fd-button 
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-5', 'up');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--add"
      />
      
        
    </button>
    

  </div>
  


  <br />
  <br />
  

  <label
    class="fd-form-label"
    for="step-6"
  >
    Information Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input is-information"
  >
    
        
    <button
      aria-label="Step down"
      class="
            fd-button
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-6', 'down');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--less"
      />
      
        
    </button>
    
    
    <input
      class="
            fd-input 
            fd-input--no-number-spinner 
            fd-step-input__input
    "
      id="step-6"
      type="number"
      value="0"
    />
    
        
    <button
      aria-label="Step up"
      class="
            fd-button 
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-6', 'up');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--add"
      />
      
        
    </button>
    

  </div>
  

  <br />
  <br />
  

  <label
    class="fd-form-label"
    for="step-7"
  >
    Error Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input is-error"
  >
    
        
    <button
      aria-label="Step down"
      class="
            fd-button
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-7', 'down');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--less"
      />
      
        
    </button>
    
    
    <input
      class="
            fd-input 
            fd-input--no-number-spinner 
            fd-step-input__input
    "
      id="step-7"
      type="number"
      value="0"
    />
    
        
    <button
      aria-label="Step up"
      class="
            fd-button 
            fd-button--transparent
            fd-step-input__button"
      onclick="stepInputValue('step-7', 'up');"
      tabindex="-1"
      type="button"
    >
      
                
      <i
        class="sap-icon--add"
      />
      
        
    </button>
    

  </div>
  


  <br />
  <br />
  


  <label
    class="fd-form-label"
    for="step-8"
  >
    Warning Step Input
  </label>
  <br />
  

  <div
    class="fd-step-input is-warning"
  >
    
    
    <button
      aria-label="Step down"
      class="
        fd-button
        fd-button--transparent
        fd-step-input__button"
      onclick="stepInputValue('step-8', 'down');"
      tabindex="-1"
      type="button"
    >
      
            
      <i
        class="sap-icon--less"
      />
      
    
    </button>
    
    
    <input
      class="
        fd-input 
        fd-input--no-number-spinner 
        fd-step-input__input
    "
      id="step-8"
      type="number"
      value="0"
    />
    
    
    <button
      aria-label="Step up"
      class="
        fd-button 
        fd-button--transparent
        fd-step-input__button"
      onclick="stepInputValue('step-8', 'up');"
      tabindex="-1"
      type="button"
    >
      
            
      <i
        class="sap-icon--add"
      />
      
    
    </button>
    

  </div>
  

</section>
`;
